# connection_pool

./: .gitignore  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.md
.github/workflows/: ci.yaml
examples/: README.md  background_cleanup_example.rs  db_example.rs  echo_example.rs  improved_test.rs  manage_connection_example.rs  mpool_explanation.rs  mpool_test.rs  simple_test.rs
src/: connection_pool.rs  example.rs  generic_pool.rs  improved_pool.rs  lib.rs  main.rs  mpool.rs  simple_pool.rs  tcp.rs
tests/: test_mpool.rs  toSocketAddrs_tests.rs
