[package]
name = "connection_pool"
version = "0.1.0"
edition = "2024"
authors = ["ssrlive <ssrlive@gmail.com>"]
description = "A generic connection pool"
homepage = "https://github.com/ssrlive/connection_pool"
keywords = ["async", "await", "pool", "connection-pool", "tokio"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ssrlive/connection_pool"

[dependencies]
async-trait = "0.1.88"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }

[[example]]
name = "db_example"
path = "examples/db_example.rs"

[[example]]
name = "echo_example"
path = "examples/echo_example.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[[example]]
name = "improved_test"
path = "examples/improved_test.rs"

[[example]]
name = "mpool_explanation"
path = "examples/mpool_explanation.rs"

[[example]]
name = "mpool_test"
path = "examples/mpool_test.rs"
