[package]
name = "connection_pool"
version = "0.1.0"
edition = "2024"
authors = ["ssrlive <ssrlive@gmail.com>"]
description = "A generic connection pool"
homepage = "https://crates.io/crates/connection_pool"
keywords = ["async", "await", "pool", "connection-pool", "tokio"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ssrlive/connection_pool"

[dependencies]
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.8"

[[example]]
name = "db_example"
path = "examples/db_example.rs"

[[example]]
name = "echo_example"
path = "examples/echo_example.rs"

[[example]]
name = "background_cleanup_example"
path = "examples/background_cleanup_example.rs"
