[package]
name = "connection-pool"
version = "0.3.1"
edition = "2024"
authors = ["ssrlive"]
description = "A high-performance, generic async connection pool for Rust with background cleanup and comprehensive logging"
homepage = "https://github.com/ssrlive/connection-pool"
keywords = ["async", "connection-pool", "tokio", "generic", "pool"]
categories = ["asynchronous", "network-programming", "database"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ssrlive/connection-pool"
documentation = "https://docs.rs/connection-pool"

[package.metadata.docs.rs]
all-features = true

[features]
tcp = []
# default = ["tcp"]

[dependencies]
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.8"

[[example]]
name = "db_example"
path = "examples/db_example.rs"

[[example]]
name = "echo_example"
path = "examples/echo_example.rs"
required-features = ["tcp"]

[[example]]
name = "background_cleanup_example"
path = "examples/background_cleanup_example.rs"
required-features = ["tcp"]
